# CommandlineTool

./: .gitignore  CMakeLists.txt  Change Log.md  Contributing.md  LICENSE  MAINTAINERS.md  ReadMe.md
examples/: ReadMe.md
examples/Example_1_BasicSyncTool/: CMakeLists.txt  main.cpp
examples/Example_2_BasicCommand/: CMakeLists.txt  SayHelloCommand.hpp  main.cpp
examples/Exaple_3_AsyncExecutioner/: CMakeLists.txt  SayHelloCommand.hpp  main.cpp
include/: AsyncExecutioner.hpp  Executioner.hpp  OnFinishHandler.hpp  OnStartHandler.hpp  Program.hpp
include/Input/: Command.hpp  CommandArguments.hpp  CommandInput.hpp  CommandTextInput.hpp  ConsoleInput.hpp  DelegateCommand.h  ExitCommand.hpp  HelpCommand.hpp  OneTimeInput.hpp
include/Parsers/: CommandArgumentsCreator.hpp  CommandParametersParser.hpp  DelegateArgumentsCreator.hpp  EmptyArgumentsCreator.hpp  ExecutableArgumentsParser.hpp  ExitArgumentsCreator.hpp  HelpArgumentsCreator.hpp
include/Utils/: StringHelper.hpp
libs/cxxopts/: cxxopts.hpp
